2nd Commit - Added Empty Component Skeleton Structure
Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container-fluid text-primary">
-  <h1>Hola..!!</h1>
-  <button class="btn-primary btn">SUBMIT</button>
+<div class="container-fluid">
+  <app-nav-header></app-nav-header>
+  <app-order></app-order>
 </div>
-.&
