--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  background-color: #000;
+  color: #fff;
+}
+
+.basic-border-red {
+  border: red 1px solid;
+}
+
+.basic-border-blue {
+  border: blue 1px solid;
+}
+
+.basic-border-green {
+  border: green 1px solid;
+}
+
+.basic-border-yellow {
+  border: yellow 1px solid;
+}
