--- a/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid ">
 
-    <!-- Header Row -->
-    <div class="row basic-border-green">
-        <span class="col-lg-2">Product Code</span>
-        <span class="col-lg-4">Product Name</span>
-        <span class="col-lg-1">MRP</span>
-        <span class="col-lg-1">DP</span>
-        <span class="col-lg-1">BV</span>
-        <span class="col-lg-1">PV</span>
-        <span class="col-lg-2">Qty</span>
+  <!-- Header Row -->
+  <div class="row basic-border-green">
+    <span class="col-lg-2">{{this.productModel.code}}</span>
+    <span class="col-lg-4">{{this.productModel.name}}</span>
+    <span class="col-lg-1">{{this.productModel.mrp}}</span>
+    <span class="col-lg-1">{{this.productModel.dp}}</span>
+    <span class="col-lg-1">{{this.productModel.bv}}</span>
+    <span class="col-lg-1">{{this.productModel.pv}}</span>
+    <span class="col-lg-2">{{this.productModel.qty}}</span>
 
-        <!-- code product mrp dp bv pv qty -->
-        <!-- 2    4       1   1  1  1  2 -->
-    </div>
+    <!-- code product mrp dp bv pv qty -->
+    <!-- 2    4       1   1  1  1  2 -->
+  </div>
 </div>
