--- a/src/app/order/order-product/product-search/product-search.component.html
+++ b/src/app/order/order-product/product-search/product-search.component.html
@@ -1,24 +1,28 @@
 <div class="container-fluid basic-border-red">
-    <p>product-search works!</p>
+  <!--  <p>product-search works!</p>-->
 
-    <!-- <div class="input-group">
-        <div class="form-outline">
-            <label class="form-label" for="form1">Search</label>
-            <input type="search" id="form1" class="form-control" />
-        </div>
-        <button type="button" class="btn btn-primary">
-            <i class="fas fa-search"></i>
-        </button>
-    </div> -->
+  <!-- <div class="input-group">
+      <div class="form-outline">
+          <label class="form-label" for="form1">Search</label>
+          <input type="search" id="form1" class="form-control" />
+      </div>
+      <button type="button" class="btn btn-primary">
+          <i class="fas fa-search"></i>
+      </button>
+  </div> -->
 
-    <div class="input-group rounded">
-        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-            aria-describedby="search-addon" />
-            <button class="btn btn-danger border-0" id="search-clear">Clear</button>
-            <button class="btn btn-primary border-0" id="search-addon">Search</button>
-    </div>
-    <hr>
+  <div class="input-group rounded mt-2">
+    <input [(ngModel)]="strSearch"
+           class="form-control rounded"
+           placeholder="Search"
+           type="search"
+           aria-describedby="search-addon"
+           aria-label="Search"/>
+    <button class="btn btn-danger border-0" id="search-clear">Clear</button>
+    <button class="btn btn-primary border-0" id="search-addon">Search</button>
+  </div>
+  <hr>
 
-    <app-product-list></app-product-list>
+  <app-product-list [strSearch]="strSearch"></app-product-list>
 
 </div>
