--- a/src/app/order/order-summary/order-summary.component.html
+++ b/src/app/order/order-summary/order-summary.component.html
@@ -1,1 +1,28 @@
-<p>order-summary works!</p>
+<div class="container-fluid">
+  <p>order-summary works!</p>
+
+  <div class="row" id="order-summary-header">
+    <span class="col-lg-2">Unique Product Count</span>
+    <span class="col-lg-2">Total Qty</span>
+    <span class="col-lg-2">Total MRP</span>
+    <span class="col-lg-2">Total DP</span>
+    <span class="col-lg-2">Total BV</span>
+    <span class="col-lg-2">Total PV</span>
+  </div>
+
+  <div class="row" id="order-summary-content">
+    <span class="col-lg-2">{{orderSummaryModel.uniqueProductCount}}</span>
+    <span class="col-lg-2">{{orderSummaryModel.totalQty}}</span>
+    <span class="col-lg-2">{{orderSummaryModel.totalMRP}}</span>
+    <span class="col-lg-2">{{orderSummaryModel.totalDP}}</span>
+    <span class="col-lg-2">{{orderSummaryModel.totalBV}}</span>
+    <span class="col-lg-2">{{orderSummaryModel.totalPV}}</span>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-8">
+      <h2>Net. Amount: {{ orderSummaryModel.netAmount }}</h2>
+    </div>
+  </div>
+
+</div>
