--- a/src/app/order/order-product/product-search/product-list/product-list.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-list.component.html
@@ -5,14 +5,14 @@
   <div class="container-fluid">
 
     <!-- Header Row -->
-    <div class="row basic-border-red" id="product-list-header">
-      <span class="col-lg-2">Product Code</span>
-      <span class="col-lg-4">Product Name</span>
-      <span class="col-lg-1">MRP</span>
-      <span class="col-lg-1">DP</span>
-      <span class="col-lg-1">BV</span>
-      <span class="col-lg-1">PV</span>
-      <span class="col-lg-2">Qty</span>
+    <div class="row basic-border-red justify-content-center text-center" id="product-list-header">
+      <span class="col-lg-2 basic-border-blue">Product Code</span>
+      <span class="col-lg-4 basic-border-blue">Product Name</span>
+      <span class="col-lg-1 basic-border-blue">MRP</span>
+      <span class="col-lg-1 basic-border-blue">DP</span>
+      <span class="col-lg-1 basic-border-blue">BV</span>
+      <span class="col-lg-1 basic-border-blue">PV</span>
+      <span class="col-lg-2 basic-border-blue">Qty</span>
 
       <!-- code product mrp dp bv pv qty -->
       <!-- 2    4       1   1  1  1  2 -->
