5th Commit - Updated Order Cart Component
Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,19 +1,20 @@
 <div class="container-fluid basic-border-red">
-    <p>order works!</p>
+  <p>order works!</p>
 
-    <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center basic-border-blue">
-            <app-order-summary></app-order-summary>
-        </div>
+  <div class="row">
+    <div class="col-lg-12 d-flex justify-content-center basic-border-blue">
+      <app-order-summary></app-order-summary>
     </div>
+  </div>
 
-    <div class="row">
-        <div class="col-lg-9 basic-border-green">
-            <app-order-product></app-order-product>
-        </div>
-        <div class="col-lg-3 basic-border-yellow">
-            <app-order-cart></app-order-cart>
-        </div>
+  <div class="row">
+    <div class="col-lg-9 basic-border-green">
+      <app-order-product></app-order-product>
     </div>
+    <div class="col-lg-3 basic-border-yellow">
+      <p class="basic-border-green">Cart</p>
+      <app-order-cart></app-order-cart>
+    </div>
+  </div>
 
 </div>
