--- a/src/app/order/order-cart/order-cart.component.html
+++ b/src/app/order/order-cart/order-cart.component.html
@@ -1,1 +1,24 @@
-<p>order-cart works!</p>
+<div class="basic-border-red ">
+  <p>order-cart works!</p>
+
+  <!-- Header Row -->
+  <div class="">
+    <div class="row p-0 m-0 text-center">
+      <!--      <div class="row basic-border-green justify-content-center text-center align-items-center">-->
+      <span class="col-lg-2 basic-border-blue">S.No.</span>
+      <span class="col-lg-5 basic-border-blue">Name</span>
+      <div class="col-lg-3 basic-border-blue"></div>
+      <span class="col-lg-2 basic-border-blue">DP</span>
+    </div>
+
+    <div class="basic-border-green">
+      <div *ngFor="let currentProductModel of cartProductList; let  sno = index">
+        <app-cart-product-item [serialNo]="sno + 1" [productModel]="currentProductModel"></app-cart-product-item>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- code product mrp dp bv pv qty      -->
+  <!-- 2    4       1   1  1  1  - 2 + x  -->
+</div>
