6th Commit - Updated Order-Qty, Order-Cart Component & Product-Item Component
Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/src/app/order/order-product/product-search/product-list/product-list.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-list.component.html
@@ -6,14 +6,19 @@
 
     <!-- Header Row -->
     <div class="row basic-border-red justify-content-center text-center" id="product-list-header">
-      <span class="col-lg-2 basic-border-blue">Product Code</span>
-      <span class="col-lg-4 basic-border-blue">Product Name</span>
-      <span class="col-lg-1 basic-border-blue">MRP</span>
-      <span class="col-lg-1 basic-border-blue">DP</span>
-      <span class="col-lg-1 basic-border-blue">BV</span>
-      <span class="col-lg-1 basic-border-blue">PV</span>
-      <span class="col-lg-2 basic-border-blue">Qty</span>
-
+      <!-- 15 columns -->
+      <span class="col-lg-1 basic-border-blue">Product Code</span>
+      <span class="col-lg-5 basic-border-blue">Product Name</span>
+      <div class="col-lg-6">
+        <div class="row">
+          <span class="col-lg-2 basic-border-blue">MRP</span>
+          <span class="col-lg-2 basic-border-blue">DP</span>
+          <span class="col-lg-2 basic-border-blue">BV</span>
+          <span class="col-lg-2 basic-border-blue">PV</span>
+          <span class="col-lg-3 basic-border-blue">Qty</span>
+          <span class="col-lg-1 basic-border-blue ">X</span>
+        </div>
+      </div>
       <!-- code product mrp dp bv pv qty -->
       <!-- 2    4       1   1  1  1  2 -->
     </div>
