--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -11,8 +11,7 @@
     <div class="col-lg-9 basic-border-green">
       <app-order-product></app-order-product>
     </div>
-    <div class="col-lg-3 basic-border-yellow">
-      <p class="basic-border-green">Cart</p>
+    <div class="col-lg-3 basic-border-yellow m-0 p-0">
       <app-order-cart></app-order-cart>
     </div>
   </div>
