--- a/src/app/order/order-cart/cart-product-item/cart-product-item.component.html
+++ b/src/app/order/order-cart/cart-product-item/cart-product-item.component.html
@@ -3,37 +3,28 @@
   <!--    <p>cart-product-item works!</p>-->
 
   <!--   Header Row -->
-  <div class="row basic-border-green justify-content-center text-center align-items-center m-0 p-0">
-    <span class="col-lg-2 basic-border-blue">{{this.serialNo}}</span>
-    <div class="col-lg-5 basic-border-blue d-flex flex-column">
-      <span class=" basic-border-blue">{{this.productModel.name}}</span>
+  <div class="row basic-border-green text-center m-0 p-0">
+
+    <!--    <span class="col-lg-2 basic-border-blue">{{this.serialNo}}</span>-->
+    <div class="col-lg-6 basic-border-blue d-flex flex-column p-0 m-0">
+      <span class="basic-border-blue ">{{this.productModel.name}}</span>
       <span class=" basic-border-red">[{{this.productModel.code}}]</span>
     </div>
-    <!-- Qty component -->
-    <div class="col-lg-3 basic-border-yellow m-0 p-0 ">
-      <app-order-qty [productModel]="productModel"></app-order-qty>
+    <div class="col-lg-6">
+      <div class="row ">
+        <!-- Qty component -->
+        <div class="col-lg-6 basic-border-yellow m-0 p-0 ">
+          <app-order-qty [productModel]="productModel"></app-order-qty>
+        </div>
+        <div class="col-lg-4 basic-border-blue d-flex flex-column m-0 p-0">
+          <span class="basic-border-blue">({{this.productModel.dp}})</span>
+          <span class="basic-border-blue">{{this.productModel.qty * this.productModel.dp}}</span>
+        </div>
+        <button *ngIf="productModel.qty > 0" class="col-lg-2 btn btn-danger m-0 p-0"
+                (click)="resetQty()">X
+        </button>
+      </div>
     </div>
-    <div class="col-lg-2 basic-border-blue d-flex flex-column">
-      <span class="basic-border-blue">({{this.productModel.dp}})</span>
-      <span class="basic-border-blue">{{this.productModel.qty * this.productModel.dp}}</span>
-    </div>
-    <!--        <button class="col-lg-3 btn btn-sm btn-warning m-0 p-0"-->
-    <!--                (click)="resetQty()">x-->
-    <!--        </button>-->
-
-
-    <!--    &lt;!&ndash; sno  code  product dp  qty sub-total       &ndash;&gt;-->
-    <!--    &lt;!&ndash; 1    123   XYZ     10  2   20        [X]   &ndash;&gt;-->
-    <!--  </div>-->
-
-    <!--  &lt;!&ndash;6286822701 - Pack Soap Work No.&ndash;&gt;-->
-    <!--  <div class="row m-0 p-0 text-center">-->
-    <!--    &lt;!&ndash;      <div class="row basic-border-green justify-content-center text-center align-items-center">&ndash;&gt;-->
-    <!--    <span class="col-lg-2 basic-border-blue">S.No.</span>-->
-    <!--    <span class="col-lg-5 basic-border-blue">Name</span>-->
-    <!--    <div class="col-lg-3 basic-border-blue"></div>-->
-    <!--    <span class="col-lg-2 basic-border-blue">DP</span>-->
-    <!--  </div>-->
 
   </div>
 </div>
