--- a/src/app/order/order-cart/order-cart.component.html
+++ b/src/app/order/order-cart/order-cart.component.html
@@ -1,14 +1,24 @@
 <div class="basic-border-red ">
-  <p>order-cart works!</p>
+  <!--  <p>order-cart works!</p>-->
+  <h3>Order Cart</h3>
+
+  <ng-template #cartIsEmpty>
+    <h3>Cart Is Empty.</h3>
+  </ng-template>
 
   <!-- Header Row -->
-  <div class="">
+  <div *ngIf="cartProductList.length !== 0; else cartIsEmpty;">
     <div class="row p-0 m-0 text-center">
       <!--      <div class="row basic-border-green justify-content-center text-center align-items-center">-->
-      <span class="col-lg-2 basic-border-blue">S.No.</span>
-      <span class="col-lg-5 basic-border-blue">Name</span>
-      <div class="col-lg-3 basic-border-blue"></div>
-      <span class="col-lg-2 basic-border-blue">DP</span>
+<!--      <span class="col-lg-1 basic-border-blue">S.No.</span>-->
+      <span class="col-lg-6 basic-border-blue">Name</span>
+      <div class="col-lg-6">
+        <div class="row">
+          <div class="col-lg-6 basic-border-blue">Qty</div>
+          <span class="col-lg-4 basic-border-blue">DP</span>
+          <span class="col-lg-2 basic-border-blue p-0 m-0">X</span>
+        </div>
+      </div>
     </div>
 
     <div class="basic-border-green">
