--- a/src/app/order/order-product/order-product.component.html
+++ b/src/app/order/order-product/order-product.component.html
@@ -1,13 +1,4 @@
 <div class="container-fluid basic-border-red">
-  <p>order-product works!</p>
-
-  <div class="row">
-    <div class="col-lg-3 basic-border-green">
-      <app-product-category></app-product-category>
-    </div>
-    <div class="col-lg-9 basic-border-yellow">
-      <app-product-search></app-product-search>
-    </div>
-  </div>
-
+<!--  <p>order-product works!</p>-->
+  <app-product-search class="basic-border-yellow"></app-product-search>
 </div>
