--- a/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
@@ -2,18 +2,24 @@
 
   <!-- Product Item Row -->
   <div class="row basic-border-green justify-content-center text-center align-items-center">
-    <span class="col-lg-2 basic-border-blue">{{this.productModel.code}}</span>
-    <span class="col-lg-4 basic-border-blue">{{this.productModel.name}}</span>
-    <span class="col-lg-1 basic-border-blue">{{this.productModel.mrp}}</span>
-    <span class="col-lg-1 basic-border-blue">{{this.productModel.dp}}</span>
-    <span class="col-lg-1 basic-border-blue">{{this.productModel.bv}}</span>
-    <span class="col-lg-1 basic-border-blue">{{this.productModel.pv}}</span>
+    <span class="col-lg-1 basic-border-blue">{{this.productModel.code}}</span>
+    <span class="col-lg-5 basic-border-blue">{{this.productModel.name}}</span>
+    <div class="col-lg-6">
+      <div class="row">
+        <span class="col-lg-2 basic-border-blue">{{this.productModel.mrp}}</span>
+        <span class="col-lg-2 basic-border-blue">{{this.productModel.dp}}</span>
+        <span class="col-lg-2 basic-border-blue">{{this.productModel.bv}}</span>
+        <span class="col-lg-2 basic-border-blue">{{this.productModel.pv}}</span>
 
-    <!-- Qty component -->
-    <div id="product-item-qty" class="col-lg-2 basic-border-blue">
-      <app-order-qty [productModel]="productModel"></app-order-qty>
+        <!-- Qty component -->
+        <div id="product-item-qty" class="col-lg-3 basic-border-blue">
+          <app-order-qty [productModel]="productModel"></app-order-qty>
+        </div>
+        <button *ngIf="productModel.qty > 0"
+                class="col-lg-1 btn btn-danger basic-border-blue" (click)="resetQty()">X
+        </button>
+      </div>
     </div>
-
     <!-- code product mrp dp bv pv qty      -->
     <!-- 2    4       1   1  1  1  - 2 + x  -->
   </div>
