--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid basic-border-red">
-  <p>order works!</p>
+<!--  <p>order works!</p>-->
 
   <div class="row">
-    <div class="col-lg-12 d-flex justify-content-center basic-border-blue">
+    <div class="col-lg-12 basic-border-blue">
       <app-order-summary></app-order-summary>
     </div>
   </div>
