--- a/src/app/order/order-product/product-search/product-search.component.html
+++ b/src/app/order/order-product/product-search/product-search.component.html
@@ -13,13 +13,13 @@
 
   <div class="input-group rounded mt-2">
     <input [(ngModel)]="strSearch"
-           class="form-control rounded"
+           class="form-control rounded placeholder-wave text-info"
            placeholder="Search"
            type="search"
            aria-describedby="search-addon"
            aria-label="Search"/>
-    <button class="btn btn-danger border-0" id="search-clear">Clear</button>
-    <button class="btn btn-primary border-0" id="search-addon">Search</button>
+    <button class="btn btn-danger border-0" id="search-clear" (click)="strSearch = ''">Clear</button>
+<!--    <span class="btn btn-primary border-0" id="search-addon">Search</span>-->
   </div>
   <hr>
 
