--- a/src/app/order/order-summary/order-summary.component.html
+++ b/src/app/order/order-summary/order-summary.component.html
@@ -17,8 +17,8 @@
       <span class="col-lg-2">{{orderSummaryModel.totalQty}}</span>
       <span class="col-lg-2">{{orderSummaryModel.totalMRP}}</span>
       <span class="col-lg-2">{{orderSummaryModel.totalDP}}</span>
-      <span class="col-lg-2">{{orderSummaryModel.totalBV}}</span>
-      <span class="col-lg-2">{{orderSummaryModel.totalPV}}</span>
+      <span class="col-lg-2">{{orderSummaryModel.totalBV.toFixed(2)}}</span>
+      <span class="col-lg-2">{{orderSummaryModel.totalPV.toFixed(2)}}</span>
     </div>
 
     <div class="row text-end">
