9th Commit - Smooth Scrollbars Added
Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
-  <app-nav-header></app-nav-header>
+<div class="">
+<!--  <app-nav-header></app-nav-header>-->
   <app-order></app-order>
 </div>
