--- a/src/app/order/order-product/order-product.component.html
+++ b/src/app/order/order-product/order-product.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid basic-border-red">
+<div class="">
 <!--  <p>order-product works!</p>-->
-  <app-product-search class="basic-border-yellow"></app-product-search>
+  <app-product-search></app-product-search>
 </div>
