--- a/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-item/product-item.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid ">
+<div class="">
 
   <!-- Product Item Row -->
-  <div class="row basic-border-green justify-content-center text-center align-items-center">
+  <div class="row zero-margin-padding basic-border-green justify-content-center text-center align-items-center">
     <span class="col-lg-1 basic-border-blue">{{this.productModel.code}}</span>
     <span class="col-lg-5 basic-border-blue">{{this.productModel.name}}</span>
     <div class="col-lg-6">
