--- a/src/app/order/order-cart/order-cart.component.html
+++ b/src/app/order/order-cart/order-cart.component.html
@@ -1,4 +1,4 @@
-<div class="basic-border-red ">
+<div id="idOrderCartContainer" class="basic-border-red ">
   <!--  <p>order-cart works!</p>-->
   <h3>Order Cart</h3>
 
@@ -8,7 +8,7 @@
 
   <!-- Header Row -->
   <div *ngIf="cartProductList.length !== 0; else cartIsEmpty;">
-    <div class="row p-0 m-0 text-center">
+    <div class="row zero-margin-padding text-center">
       <!--      <div class="row basic-border-green justify-content-center text-center align-items-center">-->
 <!--      <span class="col-lg-1 basic-border-blue">S.No.</span>-->
       <span class="col-lg-6 basic-border-blue">Name</span>
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-lg-6 basic-border-blue">Qty</div>
           <span class="col-lg-4 basic-border-blue">DP</span>
-          <span class="col-lg-2 basic-border-blue p-0 m-0">X</span>
+          <span class="col-lg-2 basic-border-blue zero-margin-padding">X</span>
         </div>
       </div>
     </div>
