--- a/src/app/order/order-product/product-search/product-list/product-list.component.html
+++ b/src/app/order/order-product/product-search/product-list/product-list.component.html
@@ -1,16 +1,18 @@
 <!--<p>product-list works!</p>-->
 
-<div class="container-fluid basic-border-blue">
+<div class=" basic-border-blue">
 
-  <div class="container-fluid">
+  <div class="container zero-margin-padding">
 
     <!-- Header Row -->
-    <div class="row basic-border-red justify-content-center text-center" id="product-list-header">
-      <!-- 15 columns -->
+    <div class="row zero-margin-padding basic-border-green justify-content-center align-items-center text-center"
+         id="product-list-header">
+      <!-- 3 columns -->
       <span class="col-lg-1 basic-border-blue">Product Code</span>
       <span class="col-lg-5 basic-border-blue">Product Name</span>
       <div class="col-lg-6">
         <div class="row">
+          <!-- 6 Columns -->
           <span class="col-lg-2 basic-border-blue">MRP</span>
           <span class="col-lg-2 basic-border-blue">DP</span>
           <span class="col-lg-2 basic-border-blue">BV</span>
@@ -23,9 +25,31 @@
       <!-- 2    4       1   1  1  1  2 -->
     </div>
   </div>
+
   <hr>
 
-  <div id="product-list-content" *ngFor="let product of (productList | productListFilterPipe:strSearch)">
-    <app-product-item [productModel]="product"></app-product-item>
+  <!--  SAMPLE CDK Scrollbar
+    <div id="idProductListContainer">
+      <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+        <div *cdkVirtualFor="let item of items" class="example-item">{{item}}</div>
+      </cdk-virtual-scroll-viewport>
+    </div>
+  -->
+
+  <div id="idProductListContainer">
+    <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+      <div *cdkVirtualFor="let product of (productList | productListFilterPipe:strSearch)"
+           class="">
+        <app-product-item [productModel]="product"></app-product-item>
+      </div>
+    </cdk-virtual-scroll-viewport>
   </div>
+
+  <!--  Old - ngFor
+  <div id="idProductListContainer" class="">
+    <div class="" *ngFor="let product of (productList | productListFilterPipe:strSearch)">
+      <app-product-item [productModel]="product"></app-product-item>
+    </div>
+  </div>-->
+
 </div>
